[package]
name = "rust-libp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["noise", "ping", "quic", "tokio", "yamux", "secp256k1", "rsa" ] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
